# mindustry-operator

./: crd.yaml  install.yaml  pyproject.toml  test.yaml
src/: __init__.py  const.py  model.py
